# USD

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE.txt  README.md  more_color_notes.cpp
build_scripts/: apple_utils.py  build_usd.py
cmake/defaults/: CXXDefaults.cmake  Options.cmake  Packages.cmake
cmake/macros/: Public.cmake
cmake/toolchains/: ios.toolchain.cmake
docs/: spec_usdpreviewsurface.rst  usdfaq.rst
extras/usd/examples/usdFindPackageExample/: CMakeLists.txt  UsdAppExample.cpp
pxr/base/arch/: CMakeLists.txt  align.cpp  defines.h  mallocHook.cpp
pxr/base/gf/: CMakeLists.txt  color.cpp  color.h  color3f.cpp  color3f.h  colorSpace.cpp  colorSpace.h  colorSpace_data.h  wrapColor.cpp  wrapColorspace.cpp
pxr/base/js/: CMakeLists.txt
pxr/base/plug/: CMakeLists.txt  initConfig.cpp  initConfig.mm
pxr/base/tf/: CMakeLists.txt
pxr/base/trace/: CMakeLists.txt
pxr/base/vt/: CMakeLists.txt
pxr/base/work/: CMakeLists.txt
pxr/imaging/: CMakeLists.txt
pxr/imaging/garch/: glApi.cpp
pxr/imaging/geomUtil/: CMakeLists.txt
pxr/imaging/hd/: CMakeLists.txt  materialNetworkSchema.cpp  sceneDelegate.h
pxr/imaging/hdMtlx/: hdMtlx.cpp
pxr/imaging/hdSt/: CMakeLists.txt  codeGen.cpp  light.cpp  materialNetwork.cpp  materialXFilter.cpp
pxr/imaging/hdsi/: CMakeLists.txt
pxr/imaging/hdx/: CMakeLists.txt  colorCorrectionTask.cpp  taskController.cpp
pxr/imaging/hgiInterop/: CMakeLists.txt  hgiInterop.cpp  hgiInterop.h
pxr/imaging/hgiMetal/: CMakeLists.txt  blitCmds.mm  hgi.h  (+9 more)
pxr/imaging/hioOpenEXR/: CMakeLists.txt  OpenEXRImage.cpp  api.h  openexr-c.c  openexr-c.h  pch.h  plugInfo.json
pxr/imaging/hioOpenEXR/OpenEXRCore/: internal_structs.h  openexr_conf.h  openexr_context.h
(+538 files in other folders)
